# verdi

./: Cargo.toml  LICENSE  README.md
crates/verdi-app/: Cargo.toml
crates/verdi-app/src/: app.rs  app_commands.rs  bind_inputs.rs  boot.lua  code_editor.rs  commands.rs  console.rs  error.rs  file_watcher.rs  gui.rs  inputs.rs  lib.rs  lua_context.rs  modeler.rs  run.lua  scripts.rs  syntax_highlighting.rs  time_step.rs  toolbar.rs  viewport.rs  window.rs  world_editor.rs
crates/verdi-audio/: Cargo.toml
crates/verdi-audio/src/: audio.rs  audio_clip.rs  bind_audio.rs  lib.rs  source.rs
crates/verdi-database/: Cargo.toml
crates/verdi-database/src/: assets.rs  lib.rs
crates/verdi-ecs/: Cargo.toml
crates/verdi-ecs/src/: archetype.rs  bind_world.rs  component.rs  entity.rs  lib.rs  world.rs
crates/verdi-ecs2/: Cargo.toml
crates/verdi-ecs2/src/: component.rs  entity.rs  lib.rs  world.rs
crates/verdi-editor/: Cargo.toml
crates/verdi-editor/src/: lib.rs  script.lua  world_editor.rs
crates/verdi-game/: Cargo.toml
crates/verdi-game/src/: entity.rs  file_watcher.rs  game.rs  game_loop.rs  lib.rs  lua_context.rs  run.lua  scripts.rs  system.rs  time_step.rs
crates/verdi-graphics/: Cargo.toml
crates/verdi-graphics/shaders/: gouraud.fs  gouraud.vs  gouraud_textured.fs  simple.fs  simple.vs  std2d.fs  std2d.vs
crates/verdi-graphics/src/: asset_loader.rs  assets.rs  bind_graphics_chip.rs  camera.rs  data_base.rs  database.rs  depth_buffer.rs  draw_command.rs  framebuffer.rs  global_shaders.rs  globals.rs  gltf_loader.rs  gpu_assets.rs  gpu_image.rs  gpu_mesh.rs  gpu_pipeline.rs  gpu_primitive.rs  gpu_program.rs  graphics_chip.rs  image.rs  index_buffer.rs  lib.rs  material.rs  mesh.rs  model.rs  node.rs  pass.rs  pipeline.rs  primitive.rs  program.rs  render_cmds.rs  render_graph.rs  render_pass.rs  render_pipeline.rs  render_state.rs  render_target.rs  renderable.rs  renderer.rs  scene.rs  scene_manager.rs  (+9 more)
crates/verdi-gui/: Cargo.toml
crates/verdi-gui/src/: code_editor.rs  commands.rs  console.rs  gui.rs  lib.rs  toolbar.rs
crates/verdi-input/: Cargo.toml
crates/verdi-input/src/: bind_inputs.rs  inputs.rs  lib.rs
crates/verdi-internal/: Cargo.toml
crates/verdi-internal/src/: common.rs  lib.rs
crates/verdi-lua/: Cargo.toml
crates/verdi-lua/src/: module.rs
crates/verdi-math/: Cargo.toml
crates/verdi-math/src/: bind_math.rs  lib.rs  math.rs  transform.rs  types.rs
crates/verdi-renderer/: Cargo.toml
crates/verdi-renderer/src/: lib.rs  mesh.rs  render_device.rs  render_pipeline.rs  renderer.rs  vertex.rs
crates/verdi-renderer/src/shader/: shader.wgsl
crates/verdi-system/: Cargo.toml
crates/verdi-system/src/: boot.lua  lib.rs  lua_context.rs  scripts.rs  system.rs  time_step.rs
crates/verdi-utils/: Cargo.toml
crates/verdi-utils/src/: lib.rs
crates/verdi-window/: Cargo.toml
crates/verdi-window/src/: lib.rs  window.rs  winit_window.rs
editor/: editor.lua
game_example/: game.lua  render_doc.cap  test.lua
game_example/assets/: monkey.gltf  tank.gltf
modeler/: modeler.lua
src/: game.rs  lib.rs  main.rs
