[package]
name = "verdi-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-utils = { path = "../verdi-utils" }
verdi-window = { path = "../verdi-window" }
verdi-graphics = { path = "../verdi-graphics" }
verdi-math = { path = "../verdi-math" }
verdi-system = { path = "../verdi-system" }
verdi-input = { path = "../verdi-input" }
glium = "*"
egui = { version = "0.20.1", default-features = true }
egui_glium = "0.20.1"
syntect = "5.0"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
thiserror = "1.0.34"