[package]
name = "verdi-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-game = { path = "../verdi-game" }
verdi-graphics = { path = "../verdi-graphics" }
verdi-input = { path = "../verdi-input" }
verdi-math = { path = "../verdi-math" }
glium = "*"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
thiserror = "1.0.34"