[package]
name = "verdi-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-window = { path = "../verdi-window" }
verdi-graphics = { path = "../verdi-graphics" }
winit = "0.26"
futures = "0.3"