[package]
name = "verdi-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-graphics = { path = "../verdi-graphics" }
verdi-input = { path = "../verdi-input" }
verdi-utils = { path = "../verdi-utils" }
verdi-math = { path = "../verdi-math" }
glium = "*"
rlua = "0.19.4"
thiserror = "1.0.34"
notify = "5.0.0"