[package]
name = "verdi-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-database = { path = "../verdi-database" }
verdi-math = { path = "../verdi-math" }
glium = "0.32.1"
mlua = { version = "0.8", features = ["lua54", "vendored"] }
image = "*"
thiserror = "1.0.34"
slotmap = "1.0.6"
bincode = "1.3.3"

[dependencies.gltf]
version = "1.0"
features = [
    "utils",
]