[package]
name = "verdi-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-game = { path = "../verdi-game" }
verdi-input = { path = "../verdi-input" }
egui = { version = "0.19.0", default-features = true }
egui_glium = "0.19.0"
glium = "*"
thiserror = "1.0.34"