[package]
name = "verdi-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-math = { path = "../verdi-math" }
mlua = { version = "0.8", features = ["lua54", "vendored"] }
glium = "0.32.1"
egui_glium = "0.19.0"