[package]
name = "verdi-internal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-app = { path = "../verdi-app" }
verdi-window = { path = "../verdi-window" }
verdi-renderer = { path = "../verdi-renderer" }
verdi-graphics = { path = "../verdi-graphics" }
verdi-game = { path = "../verdi-game" }
verdi-ecs = { path = "../verdi-ecs" }
verdi-math = { path = "../verdi-math" }