[package]
name = "verdi-window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
verdi-renderer = { path = "../verdi-renderer" }
verdi-game = { path = "../verdi-game" }
winit = "0.26"
env_logger = "0.9"
futures = "0.3"